maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:61: error: Unmatched closing brace '}' ignored here
}
^